# WetGregFirmware

./: .gitignore  .gitmodules  FIRMWARE_DEVELOPMENT_GUIDE.md  Next Steps.md  README.md  install-deps.ps1  install-deps.sh
Notes/: notes-summary.md
Requirements/: Feature_FastAutoRotate_Status-Complete.md  Feature_GregIntroTutorial_Status-Complete.md  Feature_GregIntroTutorial_Status-Incomplete.md  Feature_MenuClarity_Status-Incomplete.md  Feature_MenuSettingsReorg_Status-Complete.md  Feature_MotionScreenExit_Status-Incomplete.md  Feature_OffStateScreen_Status-Complete.md  Feature_OffStateScreen_Status-Incomplete.md  Feature_PedometerCalibration_Status-Complete.md  Feature_PowerSwitchExtender_Status-Incomplete.md  Feature_SetTimeDateControls_Status-Incomplete.md  Feature_SplashBootAnimation_Status-Complete.md  Feature_SplashBootAnimation_Status-Incomplete.md  Feature_WiseMood_Status-Complete.md  README.md
dev-setup/: docker-compose.yml
dev-setup/dilder-hub-rtos/: CMakeLists.txt  FreeRTOSConfig.h  bt.c  bt.h  btstack_config.h  dilder.gatt  freertos_hooks.c  lwipopts.h  main.c  quotes.h  rtos_tasks.c
dev-setup/dilder-hub-rtos/docs/: 00-START-HERE.md  01-ENVIRONMENT-SETUP.md  02-FILE-MANIFEST.md  07-BUILD-AND-DEPLOY.md  08-FUNCTION-REFERENCE.md  09-SOURCES-AND-FURTHER-READING.md  10-SOCIAL-AND-EMOTES.md
dev-setup/dilder-hub-rtos/lib/Config/: DEV_Config.c
dev-setup/dilder-hub-rtos/lib/e-Paper/: EPD_2in13_V4.c
dev-setup/wetgreg-hub-rtos/: CMakeLists.txt  FreeRTOSConfig.h  bt.c  bt.h  btstack_config.h  lwipopts.h  main.c  quotes.h  rtos_tasks.c  rtos_tasks.h  wetgreg.gatt
dev-setup/wetgreg-hub-rtos/docs/: 00-START-HERE.md  01-ENVIRONMENT-SETUP.md  02-FILE-MANIFEST.md  03-RTOS-PRIMER-FOR-JS-DEVS.md  04-MEMORY-POINTERS-ADDRESSING.md  05-DESIGN-AND-ARCHITECTURE.md  06-SYNCHRONIZATION.md  07-BUILD-AND-DEPLOY.md  08-FUNCTION-REFERENCE.md  10-SOCIAL-AND-EMOTES.md  11-TROUBLESHOOTING.md
dev-setup/wetgreg-hub-rtos/lib/: version.h
dev-setup/wetgreg-hub-rtos/lib/Config/: rtc_compat.c  rtc_compat.h
dev-setup/wetgreg-hub-rtos/lib/e-Paper/: EPD_2in13_V4.c
dev-setup/wetgreg-hub-rtos/src/app/: app_main.c
dev-setup/wetgreg-hub-rtos/src/drivers/: accel.c  accel.h  battery.c  battery.h  display.c  display.h  joystick.c  joystick.h  speaker.c  speaker.h
dev-setup/wetgreg-hub-rtos/src/net/: ntp.c  ntp.h  wifi.c  wifi.h
dev-setup/wetgreg-hub-rtos/src/sys/: motion.c  motion.h  power.c  power.h  rng.c  rng.h  rtc_clock.c  rtc_clock.h  storage.c  storage.h
dev-setup/wetgreg-hub-rtos/src/ui/: canvas.c  canvas.h  icons.c  icons.h  octopus.c  octopus.h  screens_anim.c  screens_anim.h  screens_home.c  screens_home.h  screens_menu.c  screens_menu.h  screens_network.c  screens_network.h  screens_social.c  screens_social.h  text.c  text.h
research/: game-firmware-c-style-guide.md
research/refresh rate enhancements/: Glider-Caster-Refresh-Rate-Analysis.md
tools/devtool/: DEVTOOL_GUIDE.md  devtool-mac.sh  devtool.py  requirements.txt
